<?xml version="1.0" encoding="UTF-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    tools:context=".activities.Level2"
    android:background="@drawable/dungeon4">

    <TextView
        android:id="@+id/lvlTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:gravity="center"
        android:text="@string/Level_2"/>

    <TextView
        android:id="@+id/requirement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/requirements_2"/>

    <ImageView
        android:id="@+id/requirement2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/isosceles_right_triangle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


        <ImageButton
            android:id="@+id/nextLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/door"
            />

        <ImageButton
            android:id="@+id/wrong1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/door"
            />

        <ImageButton
            android:id="@+id/wrong2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/door"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/answer_level2_1"/>
        <TextView
            android:id="@+id/answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/answer_level2_2"/>
        <TextView
            android:id="@+id/answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/answer_level2_3"/>
    </LinearLayout>

    <TextView
        android:id="@+id/wrongAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:text="@string/wrong"
        android:visibility="gone"/>

    <VideoView
        android:id="@+id/videoLesson2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

</LinearLayout>