<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/dungeon1"
    tools:context=".activities.Level1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lvlTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:gravity="center"
                android:text="@string/level" />

            <TextView
                android:id="@+id/requirement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/requirements" />

            <ImageView
                android:id="@+id/requirement2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/right_triangle" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/nextLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/door" />

                <ImageButton
                    android:id="@+id/wrong1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/door" />

                <ImageButton
                    android:id="@+id/wrong2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/door" />
                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/answer1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:text="@string/answer_level1_1" />

                <TextView
                    android:id="@+id/answer2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:text="@string/answer_level1_2" />

                <TextView
                    android:id="@+id/answer3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:text="@string/answer_level1_3" />
            </LinearLayout>

            <TextView
                android:id="@+id/wrongAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="@string/wrong"
                android:visibility="gone" />

            <VideoView
                android:id="@+id/videoLesson"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center" />
        </LinearLayout>
</ScrollView>